<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="new_game">NEW GAME</string>
    <string name="exit_game">EXIT GAME</string>
    <string name="welcome_to_tic_tac_toe">WELCOME TO TIC-TAC-TOE</string>
    <string name="reset">RESET</string>
    <string name="pointing_arrow">Pointing arrow</string>
    <string name="player_1">Player-1</string>
    <string name="player_2">Player-2</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="player_2_name">Enter Player-2 Name</string>
    <string name="player_1_name">Enter Player-1 Name</string>
    <string name="play">PLAY</string>
    <string name="winner">winner</string>
    <string name="restart">restart</string>
    <string name="homepage">homePage</string>
    <string name="draw">DRAW</string>
    <string name="player1">Player-1</string>
    <string name="player2">Player-2</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="choose_your_symbol">Choose Your Symbol:</string>
    <string name="enter_your_name"><u>Enter Your Name</u></string>
    <string name="please_choose_a_symbol">Please choose a symbol!</string>
    <string name="symbol_X">Symbol:X</string>
    <string name="symbol_O">Symbol:O</string>
    <string name="your_name">Your name</string>
    <string name="button_9">button_9</string>
    <string name="button_8">button_8</string>
    <string name="button_7">button_7</string>
    <string name="button_6">button_6</string>
    <string name="button_5">button_5</string>
    <string name="button_4">button_4</string>
    <string name="button_3">button_3</string>
    <string name="button_2">button_2</string>
    <string name="button_1">button_1</string>
</resources>