<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Player_page"
    android:background="@drawable/background">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:maxEms="5"
            android:text="@string/player_1"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pointing_arrow"
            app:srcCompat="@drawable/baseline_arrow_forward_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="32sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:maxEms="5"
            android:text="@string/player_2"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pointing_arrow"
            app:srcCompat="@drawable/baseline_arrow_forward_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/o"
            android:textColor="@color/white"
            android:textSize="32sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/player2_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/player_2_name"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:ems="9"
        android:maxEms="9"
        android:maxLines="1"
        android:textColorHint="@color/Light_White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/player1_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/player_1_name"
        android:minHeight="48dp"
        android:ems="9"
        android:maxEms="9"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/Light_White"
        app:layout_constraintBottom_toTopOf="@+id/player2_edit_text"
        app:layout_constraintEnd_toEndOf="@id/player2_edit_text"
        app:layout_constraintStart_toStartOf="@id/player2_edit_text"
       android:inputType="text"
        android:autofillHints="no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Brown"
        android:text="@string/play"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2_edit_text"
        app:layout_constraintVertical_bias="0.2"/>

</androidx.constraintlayout.widget.ConstraintLayout>