<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ai_mode"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/select_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_symbol"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pl_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Brown"
        android:text="@string/x"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/player_name"
        app:layout_constraintStart_toStartOf="@+id/select_symbol"
        app:layout_constraintTop_toBottomOf="@+id/select_symbol" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pl_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Brown"
        android:text="@string/o"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pl_x"
        app:layout_constraintEnd_toEndOf="@+id/select_symbol"
        app:layout_constraintTop_toTopOf="@+id/pl_x" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/fill_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:ems="9"
        android:hint="@string/your_name"
        android:inputType="text"
        android:maxEms="9"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/Light_White"
        app:layout_constraintEnd_toEndOf="@+id/player_name"
        app:layout_constraintStart_toStartOf="@+id/player_name"
        app:layout_constraintTop_toBottomOf="@+id/player_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Brown"
        android:text="@string/play"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fill_name"
        app:layout_constraintStart_toStartOf="@+id/fill_name"
        app:layout_constraintTop_toBottomOf="@+id/fill_name"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>