<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Brown"
        android:text="@string/welcome_to_tic_tac_toe"
        android:textAlignment="center"
        android:textColor="@color/Dark_Brown"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/multiplayer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Ultra_dark_brown"
            android:text="@string/multiplayer"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:padding="32dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/single_player_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:background="@color/Ultra_dark_brown"
            android:text="@string/single_player"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:background="@color/Ultra_dark_brown"
            android:text="@string/exit_game"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>